integrate info detail buku from API

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <!-- Right panel with reveal effect-->
-    <div class="panel panel-right panel-reveal theme-dark">
+    <div class="panel panel-right panel-reveal theme-darkXXX">
       <div class="view">
         <div class="page">
           <div class="navbar">
