add menu tap bar

--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -52,7 +52,7 @@
             <!-- Label text -->
             <span class="tabbar-label">Kategori</span>
           </a>
-          <a href="#view-cart" class="tab-link">
+          <a href="#view-keranjang" class="tab-link">
             <i class="icon f7-icons">cart<span class="badge color-red">5</span></i>
             <!-- Label text -->
             <span class="tabbar-label">Keranjang</span>
@@ -76,22 +76,22 @@
 
       <!-- Kategori View -->
       <div id="view-kategori" class="view view-init tab" data-name="kategori" data-url="/kategori/">
-        <!-- Catalog page will be loaded here dynamically from /catalog/ route -->
+        <!-- kategori page will be loaded here dynamically from /kategori/ route -->
       </div>
 
-      <!-- Kategori View -->
-      <div id="view-kategori" class="view view-init tab" data-name="kategori" data-url="/kategori/">
-        <!-- Catalog page will be loaded here dynamically from /catalog/ route -->
+      <!-- keranjang View -->
+      <div id="view-keranjang" class="view view-init tab" data-name="keranjang" data-url="/keranjang/">
+        <!-- keranjang page will be loaded here dynamically from /keranjang/ route -->
       </div>
 
-      <!-- Kategori View -->
-      <div id="view-kategori" class="view view-init tab" data-name="kategori" data-url="/kategori/">
-        <!-- Catalog page will be loaded here dynamically from /catalog/ route -->
+      <!-- inbox View -->
+      <div id="view-inbox" class="view view-init tab" data-name="inbox" data-url="/inbox/">
+        <!-- inbox page will be loaded here dynamically from /inbox/ route -->
       </div>
 
-      <!-- Kategori View -->
-      <div id="view-kategori" class="view view-init tab" data-name="kategori" data-url="/kategori/">
-        <!-- Catalog page will be loaded here dynamically from /catalog/ route -->
+      <!-- akun View -->
+      <div id="view-akun" class="view view-init tab" data-name="akun" data-url="/akun/">
+        <!-- akun page will be loaded here dynamically from /akun/ route -->
       </div>
     </div>
 
