add link tombol beli

--- a/src/pages/books-detail.f7.html
+++ b/src/pages/books-detail.f7.html
@@ -32,7 +32,7 @@
             </div>
           </div>
           <div class="col-50 bg-color-primary">
-            <a href="/" class="link text-color-white"><i class="icon f7-icons">cart_badge_plus</i> Beli Buku</a>
+            <a href="/keranjang/add" class="link text-color-white"><i class="icon f7-icons">cart_badge_plus</i> Beli Buku</a>
           </div>
         </div>
       </div>
