--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -25,11 +25,11 @@
           <div class="navbar">
             <div class="navbar-bg"></div>
             <div class="navbar-inner">
-              <div class="title">Right Panel</div>
+              <div class="title">Keranjang Belanja</div>
             </div>
           </div>
           <div class="page-content">
-            <div class="block">Right panel content goes here</div>
+            <div class="block">Keranjang Belanja Kosong</div>
           </div>
         </div>
       </div>
