--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -1,7 +1,7 @@
 <template>
   <div class="page" data-name="home">
     <!-- Top Navbar -->
-    <div class="navbar navbar-large">
+    <!-- <div class="navbar navbar-large">
       <div class="navbar-bg"></div>
       <div class="navbar-inner">
         <div class="left">
@@ -20,6 +20,17 @@
         <div class="title-large">
           <div class="title-large-text">Anak Hebat</div>
         </div>
+      </div>
+    </div> -->
+    <div class="navbar">
+      <div class="navbar-bg"></div>
+      <div class="navbar-inner sliding">
+        <div class="left">
+          <a href="#">
+            <img src="icon.png" alt="">
+          </a>
+        </div>
+        <div class="title">Anak Hebat Indonesia</div>
       </div>
     </div>
 
@@ -69,7 +80,7 @@
           <div class="left"></div>
           <div class="title"><small>Coming Soon</small></div>
           <div class="right">
-            <a class="link">
+            <a class="link" @click="releaseBook('/book/release/coming-soon')">
               <small>view all<i style="font-size: inherit;" class="icon f7-icons">chevron_right</i></small>
             </a>
           </div>
@@ -88,7 +99,7 @@
           <div class="left"></div>
           <div class="title"><small>Recomended Book</small></div>
           <div class="right">
-            <a class="link">
+            <a class="link" @click="releaseBook('/book/release/best-seller')">
               <small>view all<i style="font-size: inherit;" class="icon f7-icons">chevron_right</i></small>
             </a>
           </div>
