add icon,add splash screen, rename app name

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -27,10 +27,18 @@
       <div class="navbar-inner sliding">
         <div class="left">
           <a href="#">
-            <img src="icon.png" alt="">
+            <img class="padding-left" src="static/icons/icon.png" alt="">
           </a>
         </div>
-        <div class="title">Anak Hebat Indonesia</div>
+        <div class="title">Anak Hebat</div>
+        <div class="right">
+          <a href="#" class="link icon-only">
+            <i class="icon f7-icons">search</i>
+          </a>
+          <a href="#" class="link icon-only panel-open" data-panel="right">
+            <i class="icon f7-icons">cart</i>
+          </a>
+        </div>
       </div>
     </div>
 
