--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -70,7 +70,7 @@
         </div>
       </div>
       <!-- Your main view/tab, should have "view-main" class. It also has "tab-active" class -->
-      <div id="view-home" class="view view-main view-init tab tab-active" data-url="/">
+      <div id="view-home" class="view view-main view-init tab tab-active" data-name="home" data-url="/">
         <!-- Home page will be loaded here dynamically from / route -->
       </div>
 
