--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -1,27 +1,6 @@
 <template>
   <div class="page" data-name="home">
     <!-- Top Navbar -->
-    <!-- <div class="navbar navbar-large">
-      <div class="navbar-bg"></div>
-      <div class="navbar-inner">
-        <div class="left">
-          <a href="#" class="link icon-only panel-open" data-panel="left">
-            <i class="icon f7-icons if-not-md">menu</i>
-            <i class="icon material-icons if-md">menu</i>
-          </a>
-        </div>
-        <div class="title sliding">Anak Hebat</div>
-        <div class="right">
-          <a href="#" class="link icon-only panel-open" data-panel="right">
-            <i class="icon f7-icons if-not-md">menu</i>
-            <i class="icon material-icons if-md">menu</i>
-          </a>
-        </div>
-        <div class="title-large">
-          <div class="title-large-text">Anak Hebat</div>
-        </div>
-      </div>
-    </div> -->
     <div class="navbar">
       <div class="navbar-bg"></div>
       <div class="navbar-inner sliding">
@@ -43,7 +22,7 @@
     </div>
 
     <!-- Scrollable page content-->
-    <div class="page-content">
+    <div class="page-content hide-navbar-on-scroll">
       
       <!-- swiper-init to initialize swiper automatically -->
       <div class="swiper-container swiper-main-slide">
